<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="link.anyauto.smartkey.demo.fillform.FillFormVM"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{vm.counts}"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_btn"
            android:onClick="@{() -> vm.viewContacts()}"
            />

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_contact_info"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_name_hint"
            app:counterEnabled="true"
            android:layout_marginLeft="12dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.name}"
                android:imeActionId="@+id/mobile"
                android:imeOptions="actionNext"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_mobile_hint"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            android:layout_marginLeft="12dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.mobile}"
                android:id="@+id/mobile"
                android:imeActionId="@+id/addr"
                android:imeOptions="actionNext"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_addr_hint"
            android:layout_marginLeft="12dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.addr}"
                android:id="@+id/addr"
                android:imeActionId="@+id/confirm"
                android:imeOptions="actionDone"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:onClick="@{() -> vm.confirm()}"
            android:id="@+id/confirm"
            />
    </LinearLayout>
</layout>
